--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,14 @@
   text-align: center;
 }
 
+.main-app {
+  border: 1px solid black;  
+}
+
+header {
+  border: 1px solid red;
+}
+
+footer {
+  border: 1px solid blue;
+}
