--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
-html {
-  height: 100%;
+html, body {
+  height: 100vh;
 }
 
 body {
-  margin: 0;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  background-image: linear-gradient(to bottom left,#116466, #2C3531);
+  /* background-image: radial-gradient(#116466, #2c3531); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -19,8 +19,3 @@ code {
     monospace;
 }
 
-.footer {
-  flex-shrink: 0;
-  background-color: #D1E8E2;
-  color: #116466;
-}
