--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,13 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to bottom left,#116466, #2C3531);
+  background: linear-gradient(
+    to bottom right,
+    rgba(44, 53, 49, .8),
+    rgba(83, 127, 128, 0.8)
+  ),url(Images/PokerTable.png) center center no-repeat;
+  background-size: cover;
+  /* background-image:  url("Images/PokerTable.png"), linear-gradient(#116466, #2C3531); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
