--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,7 @@
 
 .main-app {
   border: 0px solid black;
+  color: #ffcb9a;
   margin: 0 auto;
   padding: 20px;
   width: 33vw;
@@ -20,7 +21,6 @@
 .dashboard {
   margin: 0 auto;  
   color: #ffcb9a;
-  padding-left: 20px;
   padding-bottom: 100px;
 }
 
@@ -30,7 +30,13 @@
   padding: 5px;
   background-color: rgba(17, 100, 102, 0.8);
   color: #d1e8e2;
-  width: 30vw;
+  width: 50vw;
+}
+
+.app-home > img {
+  margin: 0 auto;
+  width: 20vw;
+  filter: drop-shadow(0 0 0.5rem #d9b08c);
 }
 
 a:link {
@@ -68,6 +74,10 @@ ul.dropdown-menu {
 
 .navbrand-glow-border {
   filter: drop-shadow(0 0 0.5rem #d9b08c);
+}
+
+.controls-space {
+  padding: 20px;
 }
 
 .form-container {
