--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,8 +159,9 @@ ul.dropdown-menu {
 
 .card-face {
   color: #116466;
-  font-size: 36px;
-  text-shadow: 0 0 1px #2c3531, 0 0 3px #116466;
+  font-size: 34px;
+  /* text-shadow: 0 0 1px #2c3531, 0 0 3px #116466; */
+  text-shadow: 1px 1px 2px #116466;
 }
 
 .footer {
