--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,7 +150,7 @@ ul.dropdown-menu {
 }
 
 .hands-img {
-  width: 8vw;
+  width: 40px;
   margin: 0 auto;
 }
 
@@ -184,9 +184,9 @@ ul.dropdown-menu {
 
 .card-face {
   color: #116466;
-  font-size: 34px;
+  font-size: 40px;
   /* text-shadow: 0 0 1px #2c3531, 0 0 3px #116466; */
-  text-shadow: 1px 1px 2px #116466;
+  text-shadow: 1px 1px 1px #116466;
 }
 
 .card-face-small {
