--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,7 +132,7 @@ ul.dropdown-menu {
 
 .hands-cards {
   text-align: center;
-  margin: 0px 5px 30px 5px;
+  margin: 0px 10px 30px 10px;
   padding: 10px 0px 0px 0px;
   border-radius: 12px;
   border: 1px solid #feffff;
@@ -150,7 +150,7 @@ ul.dropdown-menu {
 }
 
 .hands-img {
-  width: 40px;
+  width: 5vw;
   margin: 0 auto;
 }
 
