--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,7 +132,7 @@ ul.dropdown-menu {
 
 .hands-cards {
   text-align: center;
-  margin: 0px 10px 30px 10px;
+  margin: 0px 7px 30px 7px;
   padding: 10px 0px 0px 0px;
   border-radius: 12px;
   border: 1px solid #feffff;
@@ -186,7 +186,7 @@ ul.dropdown-menu {
   color: #116466;
   font-size: 40px;
   /* text-shadow: 0 0 1px #2c3531, 0 0 3px #116466; */
-  text-shadow: 1px 1px 1px #116466;
+  text-shadow: 1px 1px 2px #FEFFFF;
 }
 
 .card-face-small {
@@ -212,7 +212,7 @@ ul.dropdown-menu {
 }
 
 .card-glow {
-  filter: drop-shadow(0 0 0.2rem #116466);
+  filter: drop-shadow(0 0 0.5rem #FEFFFF);
 }
 
 .img-glow {
