--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,6 +68,14 @@
   filter: drop-shadow(0 0 0.5rem #d9b08c);
 }
 
+hr {
+  color: #d9b08c;
+  background-color: #D9b08c;
+  /* border: 5px; */
+  width: 90%;
+  height: 2px;
+}
+
 a:link {
   color: #d1e8e2;
 }
@@ -126,7 +134,7 @@ ul.dropdown-menu {
 .login-form {
   margin: 0 auto;
   margin-top: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 50px;  
   border: 1px #116466 solid;
   background-image: linear-gradient(to bottom right, #116466, #2c3531);
   border-radius: 8px;
@@ -134,6 +142,10 @@ ul.dropdown-menu {
   padding: 20px;
   width: 400px;
   color: #ffcb9a;
+}
+
+.heading-directions {
+  text-align: center;  
 }
 
 .md-table {
@@ -149,24 +161,18 @@ ul.dropdown-menu {
   width: 150px;
 }
 
-.card-hidden {  
-  opacity: 0.6;
-  filter: blur(22px) grayscale(100%);
-  /* filter: grayscale(100%); */
+.card-hidden {
+  /* text-align: center; */
+  filter: brightness(0%);  
+  /* background-image: url("Images/PokerRunKingLOGO_NEW.png"); */
   /* visibility: hidden; */
-  /* background-color: black; */
 }
 
 .card-shown {
   visibility: visible;
-  /* background-color: yellow; */
-}
-.submitbtn-formgroup {
-  justify-content: flex-start;
 }
 
 .submit-btn {
-  /* width: 20vw; */
   color: #116466;
 }
 
@@ -202,14 +208,16 @@ ul.dropdown-menu {
 }
 
 .border-gradient {
-  border: 2px solid;
-  border-radius: 10px;
+  border: 1px solid;
+  border-radius: 8px;
   border-image-slice: 1;
-  border-width: 2px;
+  border-width: 1px;
 }
+
 .border-gradient-light {
   border-image-source: linear-gradient(to bottom left, #feffff, #d1e8e2);
 }
+
 .border-gradient-green {
   border-image-source: linear-gradient(to left, #00c853, #b2ff59);
 }
